[tool.poetry]
name = "sqs_hbs"
version = "0.1.0"
description = """
Self-Quantification System for Health Behavior Support.
This is an experimental project for my PhD work aiming
at providing users with personalized recommendations to
increase their physical activity level.
"""
authors = ["Ziip <paul.dulaud@utt.fr>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
django-environ = "^0.8.1"
django-simple-bulma = "^2.5.0"
django-widget-tweaks = "^1.4.12"
# django-silk = "^4.3.0"
flower = "^1.0.0"
whitenoise = "^6.0.0"
eventlet = "^0.33.1"
psycopg2-binary = "^2.9.3"
django-fitbit = {git = "https://github.com/Ziip-dev/django-fitbit.git"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
# django-fitbit = {path = "../django-fitbit", develop = true}
doc8 = "^0.10.1"
rstcheck = "^3.3.1"
djhtml = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
